--- a/SRSC-P2/pom.xml
+++ b/SRSC-P2/pom.xml
@@ -27,6 +27,19 @@
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
         </dependency>
+        
+		<dependency>
+   			 <groupId>com.google.guava</groupId>
+    		 <artifactId>guava</artifactId>
+   			 <version>19.0</version>
+		</dependency>
+        
+		<dependency>
+    		<groupId>com.google.code.gson</groupId>
+   		 	<artifactId>gson</artifactId>
+   			 <version>2.8.5</version>
+		</dependency>
+        
     </dependencies>
 
 </project>
