--- a/SRSC-P2/GOSTPMServerConfig.json
+++ b/SRSC-P2/GOSTPMServerConfig.json
@@ -19,5 +19,23 @@
   "hashProvider": "BC",
   "symmAlg": "AES/CBC/PKCS7Padding",
   "symmProvider": "BC",
-  "symmKeySize": 256
+  "symmKeySize": 256,
+  "initializationVector": [
+    8,
+    6,
+    5,
+    4,
+    3,
+    2,
+    1,
+    0,
+    8,
+    6,
+    5,
+    4,
+    3,
+    2,
+    1,
+    0
+  ]
 }
